Compiler/test_inputs/valid/09_float_expression.mt
@triton.jit
def mix(x): {
  y = foo(3.5);
}
