Compiler/test_inputs/invalid/08_unsupported_expression_operator.mt
@triton.jit
def bad_expr(x): {
  y = x ** 2;
}
